src/test/06-Errors/error-static-init-local-f.txt
error-static-init-local-f.ck:12:5: error: cannot call local function 'foo()' to initialize a static variable
[12]     foo() => static int THE_NUM;
         ^
